# MUSA

./: CMakeLists.txt  README.md  package.xml  task_goto_multiple.cpp
cfg/: nautilus_localization.yaml  sense_localization_goto.yaml  waypoints.yaml
launch/: sense_robot_loc.launch  task_goto.launch
libs/include/: ROSNode_GoTo.hpp  action_setvw.hpp  action_t.hpp  skill_goto.hpp  skill_t.hpp  task_goto_seq.hpp  task_t.hpp
libs/src/: ROSNode_GoTo.cpp  action_setvw.cpp  skill_goto.cpp  task_goto_seq.cpp
msg/: vel_cmd.msg
