<?xml version="1.0"?>

<package>
  <name>task_goto_multiple</name>
  <version>0.0.1</version>
  <description>The task_goto package</description>

  <author email="daniel.f.campos@inesctec.pt">Daniel Campos</author> 
  <maintainer email="daniel.f.campos@inesctec.pt">Daniel Campos</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>tf</run_depend>

  <build_depend>libqt5-core</build_depend>
  <run_depend>libqt5-core</run_depend>

  <build_depend>libqt5-gui</build_depend>
  <run_depend>libqt5-gui</run_depend>

  <build_depend>libqt5-widgets</build_depend>
  <run_depend>libqt5-widgets</run_depend>

  <build_depend>qtbase5-dev</build_depend>
  <run_depend>qtbase5-dev</run_depend>

  <build_depend>std_srv</build_depend>
  <run_depend>std_srv</run_depend>

  <build_depend>roslib</build_depend>
  <run_depend>roslib</run_depend>
  
  <build_depend>message_genaration</build_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
